--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,23 @@
   "name": "my-finances-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
+    "watch": "nodemon src/server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "graphql-import-node": "^0.0.5",
+    "graphql-modules": "^2.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
+  }
 }
