--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "graphql-import-node": "^0.0.5",
-    "graphql-modules": "^2.1.0"
+    "graphql-modules": "^2.1.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
